# repo-librarian

./: .gitattributes  .gitignore  .librarian.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEEDBACK.md  KNOWLEDGE_PROTOCOL.md  README.md  librarian-artifacts.toml  pyproject.toml
.claude/: settings.json
.claude/commands/: librarian-dream.md
.claude/hooks/: librarian-session.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
_archive/: README.md
_index/: .scaffold.json  CATALOG.md  STALENESS.md  catalog.json
benchmarks/: RESULTS.md  fuzz.py  gen_corpus.py  tasks.json
docs/: adopting.md  conflicts.md  dream.md  faq.md  navigator-guide.md  protocol.md  quickstart.md  taxonomy.md  verify-cookbook.md  verify-recipes.md
docs/roadmap/: PHASE-3-TODO.md  REVIEW-AND-TEST.md  ROADMAP-10star.md  SPEC-proposal-object.md  STATUS-2026-07-13.md  STATUS-2026-07-15.md  layer3-findings-2026-07-15.md
examples/demo-repo/: .gitignore  .librarian.toml  README.md  librarian-artifacts.toml
examples/workflows/: librarian-sweep.yml
src/librarian/: __init__.py  apply.py  backfill.py  catalog.py  cli.py  config.py  doctor.py  dream.py  enrich.py  extractors.py  frontmatter.py  (+10 more)
tests/: helpers.py  test_apply.py  test_backfill.py  test_catalog.py  test_cli.py  test_config.py  test_demo_e2e.py  test_dream.py  test_enrich.py  test_extractors.py  test_frontmatter.py  test_fuzz.py  test_golden.py  test_hooks.py  test_ingest.py  test_invariants.py  test_proposals.py  test_propose.py  test_query.py  test_registry.py  test_scaffold.py  test_scanner.py  test_search.py  test_suggest.py  test_verify.py
(+31 files in other folders)
