[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-librarian"
version = "0.1.0"
description = "A card catalog and a fact-checker for your repo's knowledge — so your coding agent reads 2 docs instead of 200, and never asserts a stale number."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris C" }]
keywords = ["knowledge-base", "documentation", "llm", "agents", "frontmatter", "catalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
# HARD RULE: zero runtime dependencies. stdlib only.
dependencies = []

[project.urls]
Homepage = "https://github.com/CCROWN2246/repo-librarian"
Changelog = "https://github.com/CCROWN2246/repo-librarian/blob/main/CHANGELOG.md"

[project.scripts]
librarian = "librarian.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
librarian = ["assets/**/*", "assets/**/.*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
